--- a/convent.cabal
+++ b/convent.cabal
@@ -31,10 +31,10 @@ library
                     , Web.Convent.Events.ParticipantJoinedEvent
                     , Web.Convent.Events.ParticipantLeftEvent
                     , Web.Convent.Events.MessageSubmittedEvent
-    build-depends:    base ^>=4.18.2.1
-                    , bytestring
-                    , text
-                    , transformers
+    build-depends:    base == 4.18.2.1
+                    , bytestring == 0.12.1.0
+                    , text == 2.1.1
+                    , transformers 
                     , containers
                     , uuid
 
@@ -43,7 +43,7 @@ executable convent-exe
     main-is:          Main.hs
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.18.2.1
+    build-depends:    base ==4.18.2.1
                     , convent
     hs-source-dirs:   app
     default-language: Haskell2010
@@ -60,7 +60,7 @@ test-suite convent-test
                     , Web.Convent.Events.ParticipantLeftEventSpec
                     , Web.Convent.Events.MessageSubmittedEventSpec
     hs-source-dirs:   test
-    build-depends:    base ^>=4.18.2.1
+    build-depends:    base == 4.18.2.1
                     , convent
                     , bytestring
                     , text
